--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -144,53 +144,45 @@ jobs:
       - name: Export TF vars
         shell: bash
         run: |
-          ACCOUNT_ID="$(aws sts get-caller-identity --query Account --output text)"
-          echo "TF_VAR_account_id=$ACCOUNT_ID" >> $GITHUB_ENV
-          echo "TF_VAR_region=us-east-1" >> $GITHUB_ENV
-          echo "TF_VAR_project=akara" >> $GITHUB_ENV
+          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+          AWS_REGION=us-east-1
+          export TF_VAR_account_id="$ACCOUNT_ID"
+          export TF_VAR_region="$AWS_REGION"
+          export TF_VAR_project="akara"
+          echo "TF_VAR_account_id=$TF_VAR_account_id" >> $GITHUB_ENV
+          echo "TF_VAR_region=$TF_VAR_region" >> $GITHUB_ENV
+          echo "TF_VAR_project=$TF_VAR_project" >> $GITHUB_ENV
+          echo "TF vars -> account_id=$TF_VAR_account_id  region=$TF_VAR_region  project=$TF_VAR_project"
 
       - name: Ensure Terraform backend (S3 + DynamoDB)
         shell: bash
         env:
           ACCOUNT_ID: ${{ steps.awsinfo.outputs.ACCOUNT_ID }}
           AWS_REGION: ${{ steps.awsinfo.outputs.AWS_REGION }}
-          TF_STATE_BUCKET: ${{ steps.awsinfo.outputs.TF_STATE_BUCKET }}
-          TF_LOCK_TABLE: ${{ steps.awsinfo.outputs.TF_LOCK_TABLE }}
         run: |
           set -euo pipefail
+          STATE_BUCKET="akara-tf-state-${ACCOUNT_ID}-${AWS_REGION}"
+          LOCK_TABLE="akara-tf-locks-${ACCOUNT_ID}-${AWS_REGION}"
+          
           echo "Creating backend resources:"
           echo "  Account: $ACCOUNT_ID"
           echo "  Region: $AWS_REGION"
-          echo "  Bucket: $TF_STATE_BUCKET"
-          echo "  Table: $TF_LOCK_TABLE"
+          echo "  Bucket: $STATE_BUCKET"
+          echo "  Table: $LOCK_TABLE"
           
           # Create S3 bucket if missing
-          if ! aws s3api head-bucket --bucket "$TF_STATE_BUCKET" 2>/dev/null; then
-            echo "Creating S3 bucket: $TF_STATE_BUCKET"
+          if ! aws s3api head-bucket --bucket "$STATE_BUCKET" 2>/dev/null; then
             if [ "$AWS_REGION" = "us-east-1" ]; then
-              aws s3api create-bucket --bucket "$TF_STATE_BUCKET"
+              aws s3api create-bucket --bucket "$STATE_BUCKET"
             else
-              aws s3api create-bucket --bucket "$TF_STATE_BUCKET" --create-bucket-configuration LocationConstraint="$AWS_REGION"
+              aws s3api create-bucket --bucket "$STATE_BUCKET" --create-bucket-configuration LocationConstraint="$AWS_REGION"
             fi
-            aws s3api put-bucket-versioning --bucket "$TF_STATE_BUCKET" --versioning-configuration Status=Enabled
-            aws s3api put-bucket-encryption --bucket "$TF_STATE_BUCKET" --server-side-encryption-configuration '{"Rules":[{"ApplyServerSideEncryptionByDefault":{"SSEAlgorithm":"AES256"}}]}'
-            aws s3api put-public-access-block --bucket "$TF_STATE_BUCKET" --public-access-block-configuration BlockPublicAcls=true,IgnorePublicAcls=true,BlockPublicPolicy=true,RestrictPublicBuckets=true
-          else
-            echo "S3 bucket already exists: $TF_STATE_BUCKET"
+            aws s3api put-bucket-versioning --bucket "$STATE_BUCKET" --versioning-configuration Status=Enabled
+            aws s3api put-public-access-block --bucket "$STATE_BUCKET" --public-access-block-configuration BlockPublicAcls=true,IgnorePublicAcls=true,BlockPublicPolicy=true,RestrictPublicBuckets=true
           fi
-          
-          # Create DynamoDB lock table if missing
-          if ! aws dynamodb describe-table --table-name "$TF_LOCK_TABLE" >/dev/null 2>&1; then
-            echo "Creating DynamoDB table: $TF_LOCK_TABLE"
-            aws dynamodb create-table \
-              --table-name "$TF_LOCK_TABLE" \
-              --attribute-definitions AttributeName=LockID,AttributeType=S \
-              --key-schema AttributeName=LockID,KeyType=HASH \
-              --billing-mode PAY_PER_REQUEST
-            aws dynamodb wait table-exists --table-name "$TF_LOCK_TABLE"
-          else
-            echo "DynamoDB table already exists: $TF_LOCK_TABLE"
-          fi
+          aws dynamodb describe-table --table-name "$LOCK_TABLE" >/dev/null 2>&1 || \
+            aws dynamodb create-table --table-name "$LOCK_TABLE" --attribute-definitions AttributeName=LockID,AttributeType=S \
+              --key-schema AttributeName=LockID,KeyType=HASH --billing-mode PAY_PER_REQUEST
 
       - name: Terraform setup
         uses: hashicorp/setup-terraform@v3
@@ -198,44 +190,27 @@ jobs:
           terraform_version: ${{ env.TF_VERSION }}
           terraform_wrapper: false
 
-      - name: Terraform version
-        run: terraform -version
-
-      - name: Terraform fmt check
-        run: terraform -chdir=infra/terraform fmt -check -diff || true
-
-      - name: Terraform init (reconfigure)
+      - name: Run Terraform with comprehensive logging
         env:
-          TF_STATE_BUCKET: ${{ steps.awsinfo.outputs.TF_STATE_BUCKET }}
-          TF_LOCK_TABLE: ${{ steps.awsinfo.outputs.TF_LOCK_TABLE }}
+          ACCOUNT_ID: ${{ steps.awsinfo.outputs.ACCOUNT_ID }}
           AWS_REGION: ${{ steps.awsinfo.outputs.AWS_REGION }}
+          STATE_BUCKET: ${{ steps.awsinfo.outputs.TF_STATE_BUCKET }}
+          LOCK_TABLE: ${{ steps.awsinfo.outputs.TF_LOCK_TABLE }}
         run: |
-          set -euo pipefail
-          echo "Initializing Terraform with backend:"
-          echo "  Bucket: $TF_STATE_BUCKET"
-          echo "  Table: $TF_LOCK_TABLE"
-          echo "  Region: $AWS_REGION"
-          
+          set -euxo pipefail
+          terraform -version
+          terraform -chdir=infra/terraform fmt -check -diff
           terraform -chdir=infra/terraform init -reconfigure \
-            -backend-config="bucket=$TF_STATE_BUCKET" \
+            -backend-config="bucket=${STATE_BUCKET}" \
             -backend-config="key=global/terraform.tfstate" \
-            -backend-config="region=$AWS_REGION" \
-            -backend-config="dynamodb_table=$TF_LOCK_TABLE" \
+            -backend-config="region=${AWS_REGION}" \
+            -backend-config="dynamodb_table=${LOCK_TABLE}" \
             -backend-config="encrypt=true" \
-            -input=false
+            -input=false -no-color 2>&1 | tee infra/terraform/tf-init.log
 
-      - name: Terraform validate
-        run: terraform -chdir=infra/terraform validate
-
-      - name: Terraform plan
-        env:
-          TF_VAR_account_id: ${{ steps.awsinfo.outputs.ACCOUNT_ID }}
-          TF_VAR_region: ${{ steps.awsinfo.outputs.AWS_REGION }}
-          TF_VAR_project: ${{ env.PROJECT_NAME }}
-        run: terraform -chdir=infra/terraform plan -input=false -no-color -out=plan.out
-
-      - name: Terraform apply
-        run: terraform -chdir=infra/terraform apply -auto-approve plan.out -input=false -no-color
+          terraform -chdir=infra/terraform validate -no-color 2>&1 | tee infra/terraform/tf-validate.log
+          terraform -chdir=infra/terraform plan -input=false -no-color -lock-timeout=5m -out=plan.out 2>&1 | tee infra/terraform/tf-plan.log
+          terraform -chdir=infra/terraform apply -input=false -no-color plan.out 2>&1 | tee infra/terraform/tf-apply.log
 
       - name: Get Terraform Outputs
         id: tf_output
@@ -254,32 +229,15 @@ jobs:
           name: infrastructure-outputs-${{ needs.setup.outputs.environment }}
           path: infrastructure-outputs.json
 
-      - name: Create failure logs
-        if: failure()
-        run: |
-          echo "=== FAILURE DIAGNOSTICS ===" > failure-logs.txt
-          echo "Date: $(date)" >> failure-logs.txt
-          echo "PWD: $(pwd)" >> failure-logs.txt
-          echo "Account: ${{ steps.awsinfo.outputs.ACCOUNT_ID || 'unknown' }}" >> failure-logs.txt
-          echo "Region: ${{ steps.awsinfo.outputs.AWS_REGION || 'unknown' }}" >> failure-logs.txt
-          echo "" >> failure-logs.txt
-          echo "=== DIRECTORY STRUCTURE ===" >> failure-logs.txt
-          ls -la >> failure-logs.txt 2>&1 || true
-          echo "" >> failure-logs.txt
-          ls -la infra/terraform >> failure-logs.txt 2>&1 || true
-          echo "" >> failure-logs.txt
-          echo "=== TERRAFORM FILES ===" >> failure-logs.txt
-          find infra/terraform -name "*.tf" -exec echo "--- {} ---" \; -exec cat {} \; >> failure-logs.txt 2>&1 || true
-
-      - name: Upload failure logs and artifacts
-        if: failure()
+      - name: Upload TF logs
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: infra-failure-logs-${{ github.run_id }}
+          name: infra-logs
           path: |
-            failure-logs.txt
-            infra/terraform/.terraform/**
+            infra/terraform/tf-*.log
             infra/terraform/plan.out
+            infra/terraform/.terraform/**
             infra/terraform/terraform.tfstate*
           if-no-files-found: ignore
 
