--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -144,6 +144,7 @@ jobs:
       - name: Export TF vars
         shell: bash
         run: |
+          set -euo pipefail
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
           AWS_REGION=us-east-1
           export TF_VAR_account_id="$ACCOUNT_ID"
@@ -170,7 +171,6 @@ jobs:
           echo "  Bucket: $STATE_BUCKET"
           echo "  Table: $LOCK_TABLE"
           
-          # Create S3 bucket if missing
           if ! aws s3api head-bucket --bucket "$STATE_BUCKET" 2>/dev/null; then
             if [ "$AWS_REGION" = "us-east-1" ]; then
               aws s3api create-bucket --bucket "$STATE_BUCKET"
@@ -181,23 +181,15 @@ jobs:
             aws s3api put-public-access-block --bucket "$STATE_BUCKET" --public-access-block-configuration BlockPublicAcls=true,IgnorePublicAcls=true,BlockPublicPolicy=true,RestrictPublicBuckets=true
           fi
           aws dynamodb describe-table --table-name "$LOCK_TABLE" >/dev/null 2>&1 || \
-            aws dynamodb create-table --table-name "$LOCK_TABLE" --attribute-definitions AttributeName=LockID,AttributeType=S \
-              --key-schema AttributeName=LockID,KeyType=HASH --billing-mode PAY_PER_REQUEST
+            aws dynamodb create-table --table-name "$LOCK_TABLE" \
+              --attribute-definitions AttributeName=LockID,AttributeType=S \
+              --key-schema AttributeName=LockID,KeyType=HASH \
+              --billing-mode PAY_PER_REQUEST
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: latest
-
-      - name: Run Terraform with comprehensive logging
-        env:
-          ACCOUNT_ID: ${{ steps.awsinfo.outputs.ACCOUNT_ID }}
-          AWS_REGION: ${{ steps.awsinfo.outputs.AWS_REGION }}
-          STATE_BUCKET: ${{ steps.awsinfo.outputs.TF_STATE_BUCKET }}
-          LOCK_TABLE: ${{ steps.awsinfo.outputs.TF_LOCK_TABLE }}
-        run: |
-          set -euxo pipefail
-          terraform -version
 
       - name: Terraform format (write + non-fatal check)
         run: |
@@ -213,17 +205,18 @@ jobs:
           LOCK_TABLE: ${{ steps.awsinfo.outputs.TF_LOCK_TABLE }}
         run: |
           set -euxo pipefail
+          terraform -version
           terraform -chdir=infra/terraform init -reconfigure \
             -backend-config="bucket=${STATE_BUCKET}" \
             -backend-config="key=global/terraform.tfstate" \
             -backend-config="region=${AWS_REGION}" \
             -backend-config="dynamodb_table=${LOCK_TABLE}" \
             -backend-config="encrypt=true" \
-            -input=false -no-color 2>&1 | tee infra/terraform/tf-init.log
+            -input=false -no-color 2>&1 | tee tf-init.log
 
-          terraform -chdir=infra/terraform validate -no-color 2>&1 | tee infra/terraform/tf-validate.log
-          terraform -chdir=infra/terraform plan -input=false -no-color -lock-timeout=5m -out=plan.out 2>&1 | tee infra/terraform/tf-plan.log
-          terraform -chdir=infra/terraform apply -input=false -no-color plan.out 2>&1 | tee infra/terraform/tf-apply.log
+          terraform -chdir=infra/terraform validate -no-color 2>&1 | tee tf-validate.log
+          terraform -chdir=infra/terraform plan -input=false -no-color -lock-timeout=5m -out=plan.out 2>&1 | tee tf-plan.log
+          terraform -chdir=infra/terraform apply -input=false -no-color plan.out 2>&1 | tee tf-apply.log
 
       - name: Get Terraform Outputs
         id: tf_output
