--- a/bootstrap-oidc-role.yaml
+++ b/bootstrap-oidc-role.yaml
@@ -94,6 +94,17 @@ Resources:
               - s3:PutBucketOwnershipControls
               - s3:GetBucketCors
               - s3:PutBucketCors
+              - s3:GetBucketPolicyStatus
+              - s3:GetAccelerateConfiguration
+              - s3:PutAccelerateConfiguration
+              - s3:GetBucketLogging
+              - s3:PutBucketLogging
+              - s3:GetLifecycleConfiguration
+              - s3:PutLifecycleConfiguration
+              - s3:GetReplicationConfiguration
+              - s3:PutReplicationConfiguration
+              - s3:GetBucketRequestPayment
+              - s3:PutBucketRequestPayment
             Resource:
               - !Sub 'arn:aws:s3:::${ProjectName}-*'
           
