--- a/bootstrap-oidc-role.yaml
+++ b/bootstrap-oidc-role.yaml
@@ -66,48 +66,13 @@ Resources:
       PolicyDocument:
         Version: '2012-10-17'
         Statement:
-          # S3 Permissions
+          # S3 Permissions (compact)
           - Sid: S3BucketManagement
             Effect: Allow
             Action:
-              - s3:CreateBucket
-              - s3:DeleteBucket
+              - s3:*Bucket*
               - s3:ListBucket
               - s3:GetBucketLocation
-              - s3:GetBucketVersioning
-              - s3:PutBucketVersioning
-              - s3:GetEncryptionConfiguration
-              - s3:GetBucketEncryption
-              - s3:PutBucketEncryption
-              - s3:GetBucketPublicAccessBlock
-              - s3:PutBucketPublicAccessBlock
-              - s3:GetBucketPolicy
-              - s3:PutBucketPolicy
-              - s3:DeleteBucketPolicy
-              - s3:GetBucketWebsite
-              - s3:PutBucketWebsite
-              - s3:GetBucketNotification
-              - s3:PutBucketNotification
-              - s3:GetBucketTagging
-              - s3:PutBucketTagging
-              - s3:GetBucketAcl
-              - s3:PutBucketAcl
-              - s3:PutBucketOwnershipControls
-              - s3:GetBucketCors
-              - s3:PutBucketCors
-              - s3:GetBucketPolicyStatus
-              - s3:GetAccelerateConfiguration
-              - s3:PutAccelerateConfiguration
-              - s3:GetBucketLogging
-              - s3:PutBucketLogging
-              - s3:GetLifecycleConfiguration
-              - s3:PutLifecycleConfiguration
-              - s3:GetReplicationConfiguration
-              - s3:PutReplicationConfiguration
-              - s3:GetBucketRequestPayment
-              - s3:PutBucketRequestPayment
-              - s3:GetObjectLockConfiguration
-              - s3:PutObjectLockConfiguration
             Resource:
               - !Sub 'arn:aws:s3:::${ProjectName}-*'
           
