--- a/bootstrap-oidc-role.yaml
+++ b/bootstrap-oidc-role.yaml
@@ -66,17 +66,44 @@ Resources:
       PolicyDocument:
         Version: '2012-10-17'
         Statement:
-          # S3 Permissions (compact)
+          # S3 Permissions
           - Sid: S3BucketManagement
             Effect: Allow
             Action:
-              - s3:*Bucket*
+              # bucket listing/policy/public access
               - s3:ListBucket
               - s3:GetBucketLocation
+              - s3:GetBucketPolicy
+              - s3:GetBucketPolicyStatus
+              - s3:GetBucketPublicAccessBlock
+              - s3:PutBucketPublicAccessBlock
+              # versioning/encryption/logging/website/notifications
+              - s3:GetBucketVersioning
+              - s3:PutBucketVersioning
+              - s3:GetBucketEncryption
+              - s3:PutBucketEncryption
+              - s3:GetBucketLogging
+              - s3:GetBucketWebsite
+              - s3:GetBucketNotification
+              - s3:PutBucketNotification
+              # tagging & ACL
+              - s3:GetBucketTagging
+              - s3:PutBucketTagging
+              - s3:GetBucketAcl
+              # CORS & accelerate
+              - s3:GetBucketCors
               - s3:GetAccelerateConfiguration
-              - s3:PutAccelerateConfiguration
+              # object lock & lifecycle & ownership controls
+              - s3:GetObjectLockConfiguration
+              - s3:GetLifecycleConfiguration
+              # allow bucket create/delete for our project buckets
+              - s3:CreateBucket
+              - s3:DeleteBucket
             Resource:
+              # Project buckets (e.g., akara-*)
               - !Sub 'arn:aws:s3:::${ProjectName}-*'
+              # Placeholder buckets used by the infra test (e.g., akara-placeholder-ACCOUNTID-REGION)
+              - !Sub 'arn:aws:s3:::${ProjectName}-placeholder-*'
           
           - Sid: S3ObjectManagement
             Effect: Allow
@@ -88,6 +115,7 @@ Resources:
               - s3:AbortMultipartUpload
             Resource:
               - !Sub 'arn:aws:s3:::${ProjectName}-*/*'
+              - !Sub 'arn:aws:s3:::${ProjectName}-placeholder-*/*'
 
           # Terraform State Backend (consolidated)
           - Sid: TerraformStateBackend
