--- a/bootstrap-oidc-role.yaml
+++ b/bootstrap-oidc-role.yaml
@@ -70,13 +70,14 @@ Resources:
           - Sid: S3BucketManagement
             Effect: Allow
             Action:
-              - s3:GetBucket*            # read any bucket-level config (replication, CORS, encrypt, lifecycle, etc.)
-              - s3:PutBucket*            # write any bucket-level config (same families)
-              - s3:ListBucket            # list objects when needed
+              # consolidated, future-proof bucket-level permissions
+              - s3:GetBucket*
+              - s3:PutBucket*
+              - s3:ListBucket
               - s3:CreateBucket
               - s3:DeleteBucket
-              - s3:DeleteBucketPolicy    # not covered by PutBucket*
-              - s3:GetBucketPolicyStatus # sometimes queried by provider
+              - s3:DeleteBucketPolicy
+              - s3:GetBucketPolicyStatus
             Resource:
               - !Sub 'arn:aws:s3:::${ProjectName}-*'
               - !Sub 'arn:aws:s3:::${ProjectName}-placeholder-*'
@@ -85,11 +86,11 @@ Resources:
           - Sid: S3ObjectManagement
             Effect: Allow
             Action:
-              - s3:GetObject
-              - s3:PutObject
+              - s3:GetObject*
+              - s3:PutObject*
               - s3:DeleteObject
-              - s3:ListMultipartUploadParts
               - s3:AbortMultipartUpload
+              - s3:ListMultipartUploadParts
             Resource:
               - !Sub 'arn:aws:s3:::${ProjectName}-*/*'
               - !Sub 'arn:aws:s3:::${ProjectName}-placeholder-*/*'
